{
    "name": "MouseController",
    "maps": [
        {
            "name": "GamePlay",
            "id": "8bc46200-506a-4b57-8046-4924326a9abd",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "1db7ea77-ec4a-4724-8fce-4844b6a15c45",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd5afdf7-46e3-483f-8a75-c220e8fe7f81",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}